# mentat-cli

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  test_model_selector_debug.py  test_model_selector_tui.py
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.instruction.md  copilot-prompts.instruction.md  mentat.instructions.md  textual_tui.instructions.md
.github/prompts/: check.prompt.md  commit.prompt.md  commit.prompt.yaml
.spec/001-build-mentat/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
.spec/001-build-mentat/checklists/: requirements.md
.spec/001-build-mentat/contracts/: cli-interface.md  internal-apis.md
.spec/bugs/model-selector/: MODEL_SELECTOR_BUG_SYSTEM_PROMPT.md  MODEL_SELECTOR_FIX.md  MODEL_SELECTOR_FIX_SESSION2.md
.spec/product/: PRD.md  ReferenceImplementations.md  UserStories.md
.specify/memory/: constitution.md
.specstory/history/: 2025-10-12_15-04-0400-setting-up-mentat-cli-project-skeleton.md  2025-10-13_10-55-0400-fix-unknown-model-gpt-5-mini.md  2025-10-13_10-58-0400-commit-prompt-behavior-and-specstory-file-changes.md  backup-2025-10-14.md
config/: mentat.toml  permissions.json
docs/: PRD.md  ReferenceImplementations.md  UserStories.md
specs/001-build-the-mentat/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-the-mentat/checklists/: requirements.md
specs/001-build-the-mentat/contracts/: cli-interface.md  internal-apis.md
src/mentat/: cli.py
src/mentat/app/: __init__.py  command_handlers.py  commands.py  queries.py  query_handlers.py
src/mentat/config/: __init__.py  loader.py  models.py
src/mentat/core/: __init__.py  bus.py  contracts.py  models.py
src/mentat/infrastructure/: __init__.py  formatters.py  fs_tool_repository.py  repositories.py
src/mentat/infrastructure/storage/: __init__.py  filesystem.py  interfaces.py
src/mentat/ioc/: container.py
src/mentat/providers/: anthropic_provider.py  interfaces.py  openai.py  selector.py
src/mentat/safety/: __init__.py  approvals.py  patterns.py  validator.py
src/mentat/session/: __init__.py  context.py
src/mentat/tui/: model_selector.py  repl_app.py  status.py
src/mentat/vcs/: __init__.py  detector.py  git.py  git_commands.py  git_helpers.py  git_parsing.py  git_private.py  git_utils.py  interfaces.py
tests/: conftest.py  test_buses.py  test_cli.py
tests/integration/: __init__.py  test_anthropic_integration.py  test_run_command.py
tests/unit/: __init__.py
tests/unit/test_core/: test_models.py  test_models_correct.py  test_models_refactored_coverage.py
tests/unit/test_infrastructure/: test_tool_repository.py
tests/unit/test_ioc/: __init__.py  test_container.py
tests/unit/test_providers/: test_anthropic_provider.py  test_interfaces.py  test_interfaces_simple.py  test_model_listing.py
tests/unit/test_safety/: test_approvals.py  test_patterns.py  test_validator.py
tests/unit/test_session/: test_context.py  test_context_simple.py
tests/unit/test_storage/: test_filesystem.py  test_storage_interfaces.py
tests/unit/test_vcs/: test_detector.py  test_git.py  test_git_refactored_coverage.py  test_git_simple.py
tools/: echo.toml  run_debug_provider.py  specify-check.toml  specify-init.toml
