[project]
name = "mentat-cli"
version = "0.1.0"
description = "Mentat CLI — an agent-driven tool orchestrator"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mentat Team" }]
license = { text = "MIT" }
keywords = ["mentat", "cli", "agent", "tools", "cqrs", "ioc"]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8",
]

[project.urls]
Homepage = "https://example.com/mentat-cli"

[project.scripts]
mentat = "mentat.cli:app"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mentat"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "pytest>=8.3",
]
